# CppND-Capstone-Project

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: ci.yml
asset-composer/: CMakeLists.txt  asset_db.c  asset_db.h  main.c
cmake/: FindSDL2_image.cmake  FindSDL3.cmake  FindSDL3_image.cmake  MacOSXBundleInfo.plist.in
config/: game_config.json  palette_maker_config.json  tile_maker_config.json
docs/: README.md  asset_composer_format.md  constants_guide.md  map_db_format.md  map_format.md  project_analysis.md  project_analysis_2026-03-07.md  todo.md  todo_from_project_analysis.md  todo_from_project_analysis_2026-03-07.md
map-maker/: CMakeLists.txt  main.c
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
palette-maker/: CMakeLists.txt  README.md  build.bat  build.sh  config.c  config.h  constants.h  main.c  palette.c  palette.h  ui.c  ui.h
shared/: CMakeLists.txt  README.md  constants.h  shared_components.c  shared_components.h
shared/config/: README.md  config_manager.c  config_manager.h
shared/docs/: API.md  ARCHITECTURE.md  INTEGRATION.md  MIGRATION.md
shared/docs/examples/: CMakeLists.txt  README.md  basic_example.c  text_demo.c
shared/error_handler/: README.md  error_handler.c  error_handler.h
shared/palette_manager/: palette_manager.c  palette_manager.h
shared/sdl_framework/: sdl_context.c  sdl_context.h
shared/tests/: CMakeLists.txt  README.md  test_main.cpp
shared/tests/integration/: test_palette_rendering_integration.cpp  test_sdl_components_integration.cpp  test_text_ui_integration.cpp
shared/tests/unit/: test_config_manager.cpp  test_double_click.cpp  test_file_utils.cpp  test_palette_manager.cpp  test_sdl_context.cpp  test_shared_components.cpp  test_text_renderer.cpp  test_ui_button.cpp
shared/tests/utils/: test_helpers.cpp  test_helpers.h
shared/text_renderer/: font_data.c  font_data.h  text_renderer.c  text_renderer.h
shared/ui_framework/: ui_button.c  ui_button.h  ui_input.c  ui_input.h  ui_input_widgets.c  ui_input_widgets.h  ui_primitives.c  ui_primitives.h  ui_viewport.c  ui_viewport.h
shared/utilities/: double_click.c  double_click.h  file_utils.c  file_utils.h
src/: AICentral.cpp  AICentral.h  character.cpp  character.h  constants.h  controller.cpp  controller.h  enemy.cpp  enemy.h  game.cpp  game.h  game.map  gamemap.cpp  gamemap.h  main.cpp  node.cpp  node.h  path_resolver.cpp  path_resolver.h  player.cpp  player.h  projectile.h  renderer.cpp  renderer.h  tempmap.cpp  tempmap.h
tile-maker/: CMakeLists.txt  README.md  build.bat  build.sh  constants.h  main.c  palette_io.c  palette_io.h  pixel_editor.c  pixel_editor.h  tile_sheet.c  tile_sheet.h  tile_specs_io.c  tile_specs_io.h  tiles_io.c  tiles_io.h  ui.c  ui.h
tools/: cppcheck_suppressions.txt  run_cppcheck.sh  summarize_cppcheck_xml.py
